# streamlit_app

./: app.py  nav.py  pyproject.toml  requirements.txt  vscode_settings.json
config/: auth_config.py  config.py
models/: jira_test_data.csv  migration_data.csv
pages/: flow.py  github_migration.py  grid.py
services/: data_service.py
static/css/: auth.css  styles.css
static/js/: app.js
utils/: api_service.py  auth_service.py  base_page.py  business_logic.py  data_manager.py  dataobject.py  ui_renderer.py
